--- a/scss/layouts/_home.scss
+++ b/scss/layouts/_home.scss
@@ -69,7 +69,7 @@ align-items: center;
 
 flex-direction: column;
 h1{
-  // margin-top: .5em;
+  margin-top: .5em;
 }
 .dish_image
 {
@@ -197,7 +197,7 @@ font-weight: 500;
   }
 
   .order_now_button{
-padding: .5em 1em;
+padding: .6em 1em;
 outline: none;
 border: none;
 font-weight: 600;
@@ -271,7 +271,7 @@ width: 9em;
 }
 .middle
 {
-  margin-top: -2.2em;
+  margin-top: -3.2em;
   .title
   {
   
